scrollbar fixaus3

--- a/client/src/oma.css
+++ b/client/src/oma.css
@@ -17,6 +17,8 @@ body {
   grid-column-start: 2;
   grid-column-end: 3;
   display: grid;
+  grid-template-columns: 100%;
+  grid-template-rows: 5%, 95%;
 }
 
 .otsikko {
@@ -38,7 +40,6 @@ body {
 .grid-item2 {
   display: grid;
   grid-template-columns: 100%;
-  grid-template-rows: 5%, 95%;
   overflow: hidden;
 }
 
